SV _ Target error , in Pixel shader
will look into it in a min

--- a/CMP502/LAB 08 Shadows/E9_Shadows/E9_Shadows/E9_Shadows.vcxproj.filters
+++ b/CMP502/LAB 08 Shadows/E9_Shadows/E9_Shadows/E9_Shadows.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="TextureShader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="WaterShader.h">
+      <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WaterShader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="App1.h">
@@ -62,6 +68,12 @@
       <Filter>Resource Files</Filter>
     </FxCompile>
     <FxCompile Include="shaders\texture_vs.hlsl">
+      <Filter>Resource Files</Filter>
+    </FxCompile>
+    <FxCompile Include="water_vs.hlsl">
+      <Filter>Resource Files</Filter>
+    </FxCompile>
+    <FxCompile Include="water_ps.hlsl">
       <Filter>Resource Files</Filter>
     </FxCompile>
   </ItemGroup>
