--- a/CMP502/LAB 08 Shadows/E9_Shadows/E9_Shadows/E9_Shadows.vcxproj.filters
+++ b/CMP502/LAB 08 Shadows/E9_Shadows/E9_Shadows/E9_Shadows.vcxproj.filters
@@ -70,10 +70,10 @@
     <FxCompile Include="shaders\texture_vs.hlsl">
       <Filter>Resource Files</Filter>
     </FxCompile>
-    <FxCompile Include="waterr_vs.hlsl">
+    <FxCompile Include="water_vs.hlsl">
       <Filter>Resource Files</Filter>
     </FxCompile>
-    <FxCompile Include="PixelShader.hlsl">
+    <FxCompile Include="water_ps.hlsl">
       <Filter>Resource Files</Filter>
     </FxCompile>
   </ItemGroup>
