Exception error , reconfigured
still going

--- a/CMP502/LAB 08 Shadows/E9_Shadows/E9_Shadows/imgui.ini
+++ b/CMP502/LAB 08 Shadows/E9_Shadows/E9_Shadows/imgui.ini
@@ -1,5 +1,15 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=834,31
 Size=254,121
+Collapsed=0
+
+[Window][Time of Day]
+Pos=329,29
+Size=230,154
+Collapsed=0
+
+[Window][Ocean Controls]
+Pos=565,28
+Size=267,159
 Collapsed=0
 
