Trying to Create a Tinted light effect , between the water texture and the base sea bed
read the heading

--- a/CMP502/LAB 08 Shadows/E9_Shadows/E9_Shadows/imgui.ini
+++ b/CMP502/LAB 08 Shadows/E9_Shadows/E9_Shadows/imgui.ini
@@ -1,15 +1,15 @@
 [Window][Debug##Default]
-Pos=834,31
-Size=254,121
+Pos=564,2
+Size=297,155
 Collapsed=0
 
 [Window][Time of Day]
-Pos=329,29
-Size=230,154
+Pos=8,0
+Size=290,153
 Collapsed=0
 
 [Window][Ocean Controls]
-Pos=565,28
+Pos=299,-4
 Size=267,159
 Collapsed=0
 
